0419/env-cmap1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: env-pod
spec: 
  containers: 
  - name: env-ctn
    image: nginx
