0419/secret-pod.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: secret-test 
spec: 
  containers: 
  - name: my-secret 
    image: nginx 
    volumeMounts:
    - name: svolume1
      mountPath: /etc/secret1
    - name: svolume2
      mountPath: /etc/secret2

  volumes:
  - name: svolume1
    secret: 
      secretName: pwd1
  - name: svolume2
    secret:
      secretName: pwd2
      items:
      - key: pw2
        path: pw2
