0419/user1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: user1
spec: 
  containers:
  - name: user1-ctn
    image: nginx
