0419/naver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
  namespace: naver
spec:
  containers:
  - name: nav-ctn
    image: nginx
    volumeMounts:
    - name: nav-vol
      mountPath: /usr/share/nginx/html/web  #내부 포드 디렉토리

  volumes:
  - name: nav-vol
    nfs:
      path: /naver    # 외부 nfs서버
      server: 211.183.3.99
---
apiVersion: v1  # 외부노출
kind: Service
metadata:
  name: naver-lb
  namespace: naver
spec:
  ports:
  - name: nav-port
    targetPort: 80
    port: 80
  selector:
    app: my-nav-pods-label
  type: LoadBalancer
---
