0419/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gildong.test.pri
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 80
